Make footer logos smaller. Fix gallery distorted images

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -353,7 +353,7 @@ kbd {
 
 .gallery-img {
   width: 30rem;
-  height: 22rem;
+  height: 30rem;
   overflow: hidden;
 }
 
@@ -1469,9 +1469,11 @@ to be custom HTML.
 }
 
 .consortium-logo {
-  object-fit: cover;
+  object-fit: contain;
   max-width: 100%;
   max-height: 100%;
+  width : 60%;
+  height: auto;
 }
 
 .cern-logo {
